--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,29 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  padding: 16px;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-sub-header {
+  background-color: #282c34;
+  display: flex;
+  padding-bottom: 16px;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
+.App-logo {
+  height: 48px;
+  width: 48px;
+  margin-right: 12px;
+  margin-left: 12px;
+  animation: App-logo-spin infinite 5s ease;
 }
 
 @keyframes App-logo-spin {
@@ -35,4 +33,23 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.list-title {
+  color: #01b8cd;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+  background-color: #f2f5ff;
+  border-radius: 6px;
+  margin-right: 4px;
+  margin-left: 4px;
+  padding-left: 2px;
+  padding-right: 2px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  opacity: 0.7;
+  color: #eb333f;
 }
